// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spinner should also render a spinner without a title 1`] = `
<div>
  <svg
    role="img"
    viewBox="-1 -1 40 40"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <g
        stroke-width="3"
        transform="translate(1 1)"
      >
        <circle
          cx="18"
          cy="18"
          r="18"
          stroke-opacity=".4"
        />
        <path
          d="M36 18c0-9.94-8.06-18-18-18"
        >
          <animatetransform
            attributeName="transform"
            dur="1s"
            from="0 18 18"
            repeatCount="indefinite"
            to="360 18 18"
            type="rotate"
          />
        </path>
      </g>
    </g>
  </svg>
</div>
`;

exports[`spinner should render a spinner 1`] = `
<div>
  <svg
    aria-labelledby="testId"
    role="img"
    viewBox="-1 -1 40 40"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="testId"
    >
      Working
    </title>
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <g
        stroke-width="3"
        transform="translate(1 1)"
      >
        <circle
          cx="18"
          cy="18"
          r="18"
          stroke-opacity=".4"
        />
        <path
          d="M36 18c0-9.94-8.06-18-18-18"
        >
          <animatetransform
            attributeName="transform"
            dur="1s"
            from="0 18 18"
            repeatCount="indefinite"
            to="360 18 18"
            type="rotate"
          />
        </path>
      </g>
    </g>
  </svg>
</div>
`;
